k3s/django.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: erp-django
  namespace: erp

spec:
  replicas: 1

  selector:
    matchLabels:
      app: erp-django

  template:

    metadata:
      labels:
        app: erp-django

    spec:

      containers:

      - name: erp-django

        image: erp-django:latest

        imagePullPolicy: Never

        ports:
        - containerPort: 8000

        resources:

          requests:
            cpu: "250m"
            memory: "256Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

---
apiVersion: v1
kind: Service

metadata:
  name: erp-django
  namespace: erp

spec:

  selector:
    app: erp-django

  ports:
  - name: http
    port: 8000
    targetPort: 8000

  type: ClusterIP
